updated to new IntelliJ to fix dispatch error